Dots animate added, changed overflow to body, fixed some css

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,9 +2,10 @@
 @import "variables";
 
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Roboto";
   width: 1200px;
   margin: 0 auto;
+  overflow: hidden;
 }
 
 sup {
@@ -49,18 +50,31 @@ sup {
     background-color: $base-grey-color;
     border-radius: 50%;
     transform: translateY(-40%);
+    position: relative;
 
     &--active {
-      background-color: $basic-blue-color;
-      width: 25px;
-      height: 25px;
+      background-color: transparent;
+
+      animation: 0.6s ease-in forwards animate-color;
+
+      &:not(:first-of-type)::before {
+        content: "";
+        height: 4px;
+        position: absolute;
+        top: 53%;
+        left: -35px;
+        transform: translateY(-50%);
+        background-color: $basic-blue-color;
+        z-index: -1;
+        width: 0;
+        animation: 0.5s ease-in forwards animate-width;
+      }
     }
 
     &--done {
       background: url("../img/fajka.png");
       background-color: $basic-blue-color;
-      width: 20px;
-      height: 20px;
+
       background-size: 50%;
       background-position: center center;
       background-repeat: no-repeat;
@@ -104,7 +118,7 @@ sup {
   position: relative;
   background: rgba(255, 255, 255, 0.85);
   display: none;
-  overflow: hidden;
+  box-shadow: 0 0 10px #b9b9b9;
 
   &__title {
     font-size: 24px;
@@ -439,7 +453,8 @@ sup {
   &__image {
     max-width: 100%;
     display: block;
-    animation: 1s ease-in 0.2s forwards animate-from-bottom;
+    transform: translateY(200%);
+    animation: 0.5s ease-in 0.2s forwards animate-from-bottom;
   }
 }
 
@@ -537,6 +552,24 @@ sup {
     transform: translateX(150%);
     opacity: 1;
     visibility: visible;
+  }
+}
+
+@keyframes animate-width {
+  from {
+    width: 0;
+  }
+  to {
+    width: 35px;
+  }
+}
+
+@keyframes animate-color {
+  from {
+    background-color: $base-grey-color;
+  }
+  to {
+    background-color: $basic-blue-color;
   }
 }
 
